tests/miniJava/neg/006842_mutation.MiniJava
class true java { public static void Main ( String [ ] java ) { { } } }
